Feat: Enhanced UI and added dark theme support